[project]
name = "forge-neo-agent-scheduler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "gradio>=6.6.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
